--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,324 +1,307 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
     
 }
-header{
-    display: flex;
-	justify-content:space-between;
-	align-items:center;
 
-	flex-direction:row;
-	flex-wrap:wrap;
+:root{
+    --color-primario: #005F99;
+    --color-secundario: #00EAD3;
+    --color-terciario: #E5E5E5;
+}
 
-    width: 100%;
-    max-width: 1280px;
+header {
+    background-color: var(--color-primario);
+    max-height: 100px;
+}
+.navegacion {
+    width: 1000px;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 
-}
-header, footer {
-    width: 100%;
-    margin: auto;
-    
-    background: #38b2b4;/*HERE*/
-}
-.logo img{
-    height: 6.25rem;
+.logo img {
+    height: 100px;
     width: auto;
 }
-.fondo{
-    background: #C6F7F0;
-}
-.navegacion{
+.enlaces {
+    height: 100px;
+    max-height: 100px;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-
-    width: 80rem;
-    margin-left: auto;
-    margin-right: auto;
-}
-.izq{
-    display: flex;
-    justify-content: flex-start;
-}
-.der{
-    display: flex;    
-    justify-content: flex-end;
-    padding: 10px;
-}
-.menu{
-    /*display: block;
-    float: left;
-    padding: 1.5625rem;*/
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: wrap;
     justify-content: center;
     align-items: center;
 }
+
 ul, li{
     list-style: none;
+    display: inline-block;
 }
-.menu li a{
-    color: black;/*HERE*/
+ul li {
+    margin: 30px;
+}
+
+ul li a {
     text-decoration: none;
-    padding: 15px 20px;
-    display: block;
-}
-.menu li .enlace-tematicas {
-    z-index: 1;
-}
-.menu li ul li a{
-    background: #194373;
-    color: #fff;
-    /**/
-}
-.menu li ul li a:hover{
-    background: #16f7f7;/*HERE*/
     color: #fff;
 }
-/*
-.menu li ul li ul li a:hover{
-    background: red;/*HERE*/
-  /*  color: #fff;*/
 
-
-.menu > li{
-    float: left;
-}
-.menu li ul{
-    display: none;
-    position: absolute; /*HERE*/
-    min-width: 150px;
-    z-index: 2;
-}
-.menu li:hover > ul{
-    display: block;
+/* CONTENEDOR DE SECCIONES */
+.container-global {
+    width: auto;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.menu li ul li {
-    position: relative;/*para arreglor las pos de los subs*/
-    z-index: 3;/*HERE*/
-}
-.menu li ul li ul{
-    right: -9.375rem;
-    top:0rem;
-}
-/*-------------------*/
+/* SECCION DE BIENVENIDA */
 
-/*-------------------*/
-/* Buscador*/
-/*-------------------*/
-.buscador {
+/* SECCIÓN 1 */
+.seccion-bienvenido {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 400px;
+    width: 1000px;
+    max-width: 1000px;
+    max-height: 400px;
+
+}
+.texto-bienvenida {
+    background-color: var(--color-primario);
+    color: #fff;
+    width: 50%;
+    height: 400px;
+    max-height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.texto-bienvenida h2 {
+    text-transform: uppercase;
+    font-size: 48px;
+    padding: 20px;
+}
+.texto-bienvenida p {
+    font-size: 25px;
+}
+.img-bienvenida {
+    width: 500px;
+    max-width: 500px;
+    height: 400px;
+    max-height: 400px;
+}
+
+/* SECCION SERVICIOS */
+
+.seccion.servicios {
+    height: auto;
+}
+.titulo-seccion-servicios {
+    width: auto;
+    text-align: center;
+    height: 34px;
+    margin:20px;
+    color: var(--color-primario)
+}
+.contenedor-servicios {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
 }
-.buscador .input-bsc {
-    width: 13.75rem;
-    background-color: #fff;
-    border: solid 0rem;
-    outline: none;
-    text-align: center;
-    border-radius: 1.875rem;
-    padding: 10px 10px 10px 10px;
-}
-.buscador .btn-buscar {
-    width: auto;
-    background-color: #194373;
-    border: solid 0rem;
-    outline: none;
-    border-radius: 30px;
+.contenedor-servicios div {
+    width: 405px;
+    height: 70px;
+    background-color: var(--color-primario);
+    margin: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
     color: #fff;
+}
+.contenedor-servicios div i {
     margin-left: 10px;
-    padding: 10px 15px;
+    margin-right: 10px;
+    font-size: 20px;
 }
-.input-bsc, .btn-buscar{
-    font-size: 14px;
+
+/*SECCION BANNER */
+
+.seccion-banner {
+    max-width: 1000px;
+    min-height: 310px;
+    background: url(/imagenes/banner_agendar_cita.png);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
 }
-.buscador .btn-buscar:hover{
-    background:#00b4bd;
+.seccion-banner h2 {
+    margin-bottom: 10px;
+    font-size: 40px;
+    text-align: center;
 }
-/*BOTON CITA*/
-.boton-citas-padre{
-    height: 100px;
-    display: block;
-    width: 100%;
-    background-color:#f5f5f5;
-}
-.texto-citas{
-    float: left;
-}
-.texto-citas{
-    padding: 10px 20px;
-}
-.texto-citas h2{
-    padding: 0xp 0px 8px 0px;
-    color: #00309e;
-}
-.texto-citas p{
-    font-size: 15px;
-}
-.enlace-citas a{
-    display: block;
-    padding: 15px;
-    float: right;
+.seccion-banner a {
+    padding: 10px;
     color: #fff;
     text-decoration: none;
-    font-family: Arial;
-    font-size: 14px;
-    border-radius: 30px;
-    background: #00309e;
-    letter-spacing: 2xp;
-    margin: 25px;
-        
-}
-.enlace-citas a:hover{
-    box-shadow: 0 0 15px 0 #000;
-}
-/*PRESENTACION*/
-section{
-    width: 100%;
-    max-width: 1280px;
-    margin:0px auto;
-}
-.contenedor-presentacion{
+    background: var(--color-secundario);
     display: flex;
-    align-items: center;
     justify-content: center;
-    text-align: center;
-    height: 300spx;
-    background: rgb(125, 63, 152, .9);
+    align-items: center;
+    border-radius: 30px;
 }
-.cont-imagenes{
+/*efecto hover*/
+.seccion-banner a:hover {
+    background: var(--color-primario);
+}
+
+.seccion-banner a i {
+    margin-right: 10px;
+}
+
+/*SECCION GALERIA */
+.seccion-galeria {
+    max-width: 1000px;
+    height: 250px;
     display: flex;
-    float: left;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
-.banner1, .banner2{
+.seccion-galeria img {
+    height: 150px;
+    width: 235px;
+}
+
+/*SECCION AGENDA */
+
+.seccion-Agenda {
+    height: 500px;
+    max-width: 1000px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.calendar {
+    width: 50%;
+    background: var(--color-primario);
+    padding: 10px;
+    text-align: center;
+    color: #fff;
+}
+.calendar h2 {
+    font-size: 20px;
+    margin: 10px;
+}
+.calendar input {
     width: auto;
+}
+
+.formulario-contacto {
+    color: #fff;
+    padding: 10px;
+    width: 50%;
+    height: 400px;    
+    background: rgb(41, 34, 34);
+}
+.formulario-contacto h2 {
+    text-align: center;
+}
+.seccion-tarjeta {
+    background: var(--color-terciario);
     height: 200px;
+    max-width: 1000px;
+    display: flex;
+    flex-direction: wrap;
+    justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
+}
+.tarjeta-visitanos, .tarjeta-mail {
+    width: 300px;
+    height: 160px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    text-align: center;
+    box-shadow: 0px 0px 5px 0px #000;
+}
+
+.tarjeta-visitanos {
+    margin-right: 10px;
+}
+.tarjeta-mail {
+    margin-left: 10px;
+}
+.tarjeta-mail i, .tarjeta-visitanos i {
+    color: var(--color-primario);
+    margin: 5px;
+}
+.tarjeta-mail a {
+    text-decoration: none;
+    color:#000;
+}
+
+/* PIE DE PAGINA */
+footer {
+    height: 300px;
+    background-color: var(--color-primario);
+    width: 100%;
+    max-width: 100%;
+}
+.contenedor-footer {
+    max-width: 1000px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    flex-wrap:wrap;
     justify-content: center;
 }
+.seccion-enlaces {
+    border-bottom: 4px solid #fff;
+}
+.seccion-enlaces a { 
+    padding: 8px;
+    border-radius: 30px; 
+}
+.seccion-enlaces a:hover {
+    box-shadow: 0px 0px 5px 0px #000;
+}
+.seccion-metodos-pago {
+    margin: 10px;
+}
+.seccion-metodos-pago img {
+    height: 60px;
+    width: auto;
+    margin: 8px;
+}
 
-.texto-presentacion{
+.seccion-datos-extra {
+    margin: 10px;
+}
+.seccion-datos-extra p {
+    margin: 5px;
+}
+.seccion-datos-extra a{
     color: #fff;
 }
-.texto-presentacion{
-    width: 780px;
-    height: 200px;
-}
-h1{
-    margin: 5px 5px;
-}
-.slogan{
-    text-align: center;
-    margin: 5px 5px;
-    font-family: 15px;
-}
-.txt-preset{
-    text-align: justify;
-    font-size: 15px;
-    margin: 10px 20px;
-}
-.consultas{
-    text-align: center;
-    margin: 10px 0px 0px 0px;
-}
-.contacts{
-   text-align: center;
-   font-size: 15px;
-   margin: 30px 20px;
-}
-/*seccion de opiniones
-.opinion-coment{
-    height: 100px;
-    display: flex;
-    width: 1300px;
-    background-color:rgb(125, 63, 152, .9);
-   /* 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 300spx;
-}*/
-/*Opiniones
-
-
-.enlace-opiniones a{
-    display: block;
-    padding: 10px;
-    float: left;
-    color: #fff;
-    text-decoration: none;
-    font-family: Arial;
-    font-size: 14px;
-    border-radius: 30px;
-    background: hsl(207, 83%, 53%);
-    letter-spacing: 2xp;
-    margin: 50px;
-    
-}
-.enlace-opiniones a:hover{
-    box-shadow: 0 0 15px 0 #000;
-
-}
-.enlace-opiniones label{
-    display: block;
-    padding: 10px;
-    float:left;
-    color: #fff;
-    text-decoration: none;
-    font-family: Arial;
-    font-size: 14px;
-    border-radius: 20px;
-    background: hsl(207, 83%, 53%);
-    letter-spacing: 2xp;
-    margin: 50px;
-    
-}
-.cont-coment{
-    height: 30px;
-    float:left;
-    border: 15px;
-    margin: 50px;
-
-}
-.enviar-coment{
-    padding: 5px;
-    float: left;
-    margin: 50px;
-    
-}*/
-footer{
-    height: 40px;
-    display: flex;
-    width: 1245px;
-    background-color:#47b4f3;
-    margin:5px 40px;
-    
-}
-.pie-pagina{
-    padding: 20px 20px;
-    color: black;
-    text-decoration:none;
-    font-family: Arial;
-    font-size: 14px;
- 
-}
-.pie-pagina p{
-    font-size: 15px;
-}
-.redes{
-    text-align: center;
-    margin: 10px 0px 0px 0px;
-    float: none;
-}
-
-/*--------------*/
-/*-----LISTA DE PRECIOS DE SERVICIOS---------*/
-/*--------------*/
