--- a/assets/css/pc-estilos.css
+++ b/assets/css/pc-estilos.css
@@ -1,10 +1,3 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Roboto', sans-serif; 
-    box-sizing: border-box; 
-}
-
 :root{
     --dark-primary-color: #303F9F;
     --light-primary-color: #C5CAE9;
@@ -32,6 +25,14 @@
 
     --color-star-review: #FFCE31;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif; 
+    box-sizing: border-box; 
+}
+
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
@@ -41,7 +42,7 @@ html {
 header {
     background-color: var(--dark-primary-color);
     height: 10rem;
-    width: 100vw;
+    width: 100%;
 }
 .navegacion {
     max-width: 100rem;
@@ -53,7 +54,8 @@ header {
 }
 .logo img {
     margin: 0 1rem;
-    height: 10rem; width: auto;
+    height: 10rem;
+    width: auto;
 }
 .enlaces {
     height: 10rem;
@@ -74,23 +76,28 @@ ul li a {
     text-decoration: none;
     color: #fff;
     font-size: 1.6rem;
+    padding-bottom: .3rem;
+}
+ul li a:hover {
+    transition: .3s;
+    border-bottom: 2px solid var(--color-complentario);    
+    font-size: 1.6rem;
 }
 /* iconos */
 .fas, .far {
     font-size: 1.8rem;
     margin-right: .5rem;
 }
-/* SECCIONES */
-.contenedor-global {
-    width: 100%;
-    height: auto;
+ul li a:hover{
+    color: var(--color-complentario);
 }
+/* SECCIONES */
 
 /* SECCION BIENVENIDA */
 .seccion-bienvenida {
     background-color: var(--dark-primary-color);
-    height: calc(100vh - 10rem);
-    width: 100vw;
+    min-height: calc(100vh - 40rem);
+    width: 100%;
 
     display: flex;
     flex-direction: column;
@@ -101,16 +108,17 @@ ul li a {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     max-width: 100rem;
-    min-height: 00px;
-    margin-top: 30px;   
+    height: 100%;
+    /* height seccion 1 solucionado */
 }
 
 .texto-bienvenida {
     color: #fff;
     width: 50%;
-    min-height: 400px;
+    min-height: 40rem;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -119,20 +127,21 @@ ul li a {
     text-align: center;
 }
 .texto-bienvenida h2 {
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
-    font-size: 48px;
-    padding: 20px;
-    letter-spacing: 5px;
+    font-size: 4.8rem;
+    padding: 2rem;
 }
 .texto-bienvenida p {
-    font-size: 25px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 2rem;
     color: var(--text-icons);
+    text-align: left;
 }
 .img-bienvenida  img{
-    width: 500px;
-    max-width: 500px;
-    height: 400px;
+    width: 50rem;
+    max-width: 50rem;
+    height: 40rem;
 }
 .wave, .wave-2 {
     width: 100%;
@@ -145,58 +154,68 @@ ul li a {
 /* SECCION SERVICIOS */
 .seccion-servicios {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
 
-    min-width: 100vw;
+    width: 100%;
     min-height: 100vh;
+}
+
+.contenedor-padre-servicios {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    min-height: calc(100vh - 30vh);    
 }
 .contenedor-servicios {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
     align-items: center;
-    justify-content:space-around;
     max-width: 100rem;
-    min-height: calc(100vh - 30vh);
+    
     margin-left: auto;
     margin-right: auto;
 }
 .servicio {
-    margin: 5px;
-    width: 235px;
-    height: 210px;
+    margin: .5rem;
+    width: 23.5rem;
+    height: 21rem;
     background: #fff;
-    border-radius: 8px;
+    border-radius: .8rem;
     font-family: 'Roboto', sans-serif;
 }
 .img-servicio {
-    height: 150px;
+    height: 15rem;
 }
 .servicio .img-servicio img {
-    border-radius: 8px 8px 0px 0px;
-    width: 235px;
+    border-radius: .8rem .8rem 0 0;
+    width: 23.5rem;
     height: auto;
 }
 .seccion-infomacion-servicio {
-    height: 60px;
-    width: 235px;
+    height: 6rem;
+    width: 23.5rem;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     color: var(--primary-text);
-    border-radius: 0 0 8px 8px;
+    border-radius: 0 0 .8rem .8rem;
     color: var(--text-icons);
     background-color: var(--dark-primary-color);
 }
 .seccion-infomacion-servicio i, .seccion-infomacion-servicio p {
-    font-size: 30px;
+    font-size: 3rem;
 }
 .seccion-infomacion-servicio i {
-    margin: 10px;
+    margin: 1rem;
 }
 .seccion-infomacion-servicio h5 {
     font-size: 1.5rem;
@@ -207,11 +226,10 @@ ul li a {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
 
     width: 100%;
-    min-width: 100vw;
     min-height: 100vh;
 
     background-color: var(--light-primary-color);
@@ -229,7 +247,7 @@ ul li a {
 }
 
 .subseccion-1-eslogan {
-    min-width: calc(100rem - 450px);
+    min-width: calc(100rem - 45rem);
     display: flex;
     flex-direction: column;
     padding: 1rem;
@@ -247,11 +265,14 @@ ul li a {
     transition: .3s;
 }
 .subseccion-1-eslogan a {
-    padding: 5px;
+    padding: .5rem;
     font-size: 1.5rem;
     text-decoration: none;
     text-align: center;
-    display: block;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     border-radius: .8rem;
     background-color:var(--dark-primary-color);
 }
@@ -262,24 +283,24 @@ ul li a {
 
 .subseccion-1-eslogan a .far {
     font-size: 2.5rem;
-    margin: 5px;
+    margin: .5rem;
 }
 .img-banner {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
-    max-width: 430px;
-    height: 480px;
+    max-width: 43rem;
+    height: 48rem;
 }
 .img-banner img {
-    width: 430px;
-    height: 430px;
+    width: 43rem;
+    height: 43rem;
 }
 
 /* SECCION AGENDAR */
 .seccion-agendar {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 
     display: flex;
@@ -293,22 +314,22 @@ ul li a {
     justify-content: center;
     align-items: center;
 
-    margin-top: 50px;
+    margin-top: 5rem;
 }
 /* TITULOS SECCIONES */
 .titulo-seccion-servicios h2, .contenedor-agendar > span, .contenedor-opiniones > h2 {
     font-weight: bold;
-    font-size: 25px;
+    font-size: 2.5rem;
     text-transform: uppercase;
     color: var(--primary-color-2);
-    margin: 20px;
+    margin: 2rem;
 }
 
 /* CONTENEDOR FORMULARIO */
 .contenedor-form {
-    max-width: 845px;
-    height: 340px;
-    border-radius: 8px;
+    max-width: 84.5rem;
+    height: 34rem;
+    border-radius: .8rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -318,21 +339,21 @@ ul li a {
 .img-banner-form img {
     width: 100%;
     height: auto;
-    border-radius: 8px 0px 0px 8px;
+    border-radius: .8rem 0 0 .8rem;
     background-color: var(--primary-color-2);
 }
 
 /*seccion formulario */
 form {
-    border-radius: 0px 8px 8px 0px;
+    border-radius: 0 .8rem .8rem 0;
     background-color: var(--color-fondo-section-2);
-    max-height: 340px;
-    width: 335px;
+    max-height: 34rem;
+    width: 33.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 8px;
+    padding: .8rem;
 }
 /* instrucciones */
 .form-date > span, .info-client .titulos {
@@ -369,7 +390,7 @@ form input, select {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 2px 0px;
+    margin: .2rem 0;
 }
 /*Definicion de tam de contenedores */
 .section-date > input, .section-hours select, .services-list {
@@ -393,31 +414,32 @@ form input, select {
 /*select */
 select {
     outline: none;
-    border: 0px;
-    border-radius: 4px;
+    border: 0;
+    border-radius: .4rem;
 }
 
 /*indicacion form*/
 .info-client > span {
     color: var(--primary-color-2);
-    margin: 8px 0px;
+    margin: .8rem 0;
 }
 
 /* placeholder */
 ::placeholder {
-    padding-left: 4px;
-    font-size: 14px;
+    padding-left: .4rem;
+    font-size: 1.4rem;
     color: var(--primary-color-2);
 }
 
 /* << BOTON DE ENVIAR >> */
 .btn-enviar label input {
     display: inline-block;
-    padding: 0 3rem;
+    padding: 0 .3rem;
     color: #ffffff;
     height: 3rem;
     background-color: var(--primary-color-2);
     font-size: 1.5rem;
+    cursor: pointer;
 }
 
 /*Estado hover del btn enviar */
@@ -428,7 +450,7 @@ select {
 
 /* SECCION OPINIONES */
 .seccion-opiniones {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: var(--color-fondo-section-2);
     display: flex;
@@ -443,7 +465,6 @@ select {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
     max-width: 100rem;
     height: calc(100vh - 30vh);
 }
@@ -507,7 +528,7 @@ select {
 
 .seccion-contacto {
     min-height: 30rem;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -576,7 +597,7 @@ select {
     align-items: center;
     
     position: fixed;
-    right: 0;
+    right: 2rem;
     bottom: 0;
     margin: 2rem;
     border: solid .2rem var(--color-complentario);
@@ -589,14 +610,15 @@ select {
 }
 .arrow:hover {
     transition: .3s;
-    background-color: var(--color-complentario);
+    height: 5.5rem;
+    width: 5.5rem;
 }
 
 /* PIE DE PAGINA */
 footer {
     height: 30rem;
     background-color: var(--dark-primary-color);
-    width: 100vw;
+    width: 100%;
 }
 .contenedor-footer {
     max-width: 100rem;
