--- a/assets/css/pc-estilos.css
+++ b/assets/css/pc-estilos.css
@@ -96,7 +96,7 @@ ul li a:hover{
 /* SECCION BIENVENIDA */
 .seccion-bienvenida {
     background-color: var(--dark-primary-color);
-    min-height: calc(100vh - 40rem);
+    min-height: calc(100vh - 10rem);
     width: 100%;
 
     display: flex;
@@ -111,7 +111,7 @@ ul li a:hover{
     align-items: center;
     flex-wrap: wrap;
     max-width: 100rem;
-    height: 100%;
+    height: 70vh;
     /* height seccion 1 solucionado */
 }
 
