--- a/assets/css/mobile_tablet_styles.css
+++ b/assets/css/mobile_tablet_styles.css
@@ -44,6 +44,10 @@ header {
     height: 10rem;
     width: 100%;
 }
+/* CONTENEDOR GLOBAL*/
+.contenedor-global {
+    max-width: 100vw;
+}
 .logo img {
     margin: 0 1rem;
     height: 10rem;
@@ -51,31 +55,49 @@ header {
 }
 /* update here! */
 .menu {
-    height: 7.5rem;
-    max-width: 100rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
+    height: 4rem;
 }
-
-/* menu */
+.btn_menu {
+    display: inline-flex;
+}
 .menu_items {
-    display: flex;
-    list-style: none;
-    margin-right: 1rem;
+    position: absolute;
+    z-index: 100;
+    width: 100%;
+    background-color: var(--primary-color-2);
+    top: -100vh;
+    text-align: center;
+    transition: all .4s;
+    flex-direction: column;
+    padding: .5rem;
 }
 .menu_items li {
-    margin: 0 1rem;
+    margin: 1rem 0 0 0;
+    line-height: 2rem;
+}
+.menu_items li:hover {
+    background: none;
+}
+.menu_items li a {
+    font-size: 2rem;
+    color: var(--text-icons);
+}
+.menu_items li a:hover {
+    color: var(--text-icons);
 }
 
-/*iconos*/
-.menu_items li a {
-    padding: .2rem 1rem;
-    text-decoration: none;
-    font-size: 1.4rem;
-    display: block;
-    color: var(--text-icons);
+ul.show {
+    top: 4rem;
+    height: auto;
+    border-radius: .8rem;
+}
+/* << LOGOTIPO >>*/
+.logo {
+    margin: 0 2rem;
+}
+.fa-bars {
+    font-size: 2.5rem;
+    margin-right: 1rem;
 }
 
 /*icon menu */
@@ -83,7 +105,7 @@ header {
     margin-right: 1rem;
     font-size: 2.5rem;
     cursor: pointer;
-    color: var(--color-white);
+    color: var(--text-icons);
     display: none;
 }
 
@@ -91,34 +113,6 @@ ul.show {
     top: 4.5rem;
 }
 
-/*
-.enlaces {
-    height: 10rem;
-    display: flex;
-    flex-direction: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-ul, li{
-    list-style: none;
-    display: inline-block;
-}
-ul li {
-    margin: 3rem;
-}
-ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 1.6rem;
-    padding-bottom: .3rem;
-}
-ul li a:hover {
-    transition: .3s;
-    border-bottom: 2px solid var(--color-complentario);    
-    font-size: 1.6rem;
-}
-*/
 /* iconos */
 .fas, .far {
     font-size: 1.8rem;
@@ -142,46 +136,46 @@ ul li a:hover{
 }
 .contenedor-bienvenida {
     display: flex;
-    flex-direction: row;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    max-width: 100rem;
-    height: 70vh;
+    flex-wrap: nowrap;
+    width: 100%;
+    min-height: 70vh;
     /* height seccion 1 solucionado */
 }
 
 .texto-bienvenida {
     color: #fff;
-    width: 50%;
-    min-height: 40rem;
+    width: 100%;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding: 1rem;
 }
 .texto-bienvenida h2 {
     font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
-    font-size: 4.8rem;
-    padding: 2rem;
+    font-size: 2rem;
+    padding: .8rem;
 }
 .texto-bienvenida p {
     font-family: 'Poppins', sans-serif;
-    font-size: 2rem;
+    font-size: 1.4rem;
     color: var(--text-icons);
-    text-align: left;
+    text-align: center;
 }
 .img-bienvenida  img{
-    width: 50rem;
-    max-width: 50rem;
-    height: 40rem;
+    max-width: 70vw;
+    height: auto;
 }
 .wave, .wave-2 {
     width: 100%;
-    height: 30vh;
+    height: 10vh;
     position: relative;
     bottom: 0;
     left: 0;
@@ -212,7 +206,7 @@ ul li a:hover{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     max-width: 100rem;
     
@@ -260,34 +254,35 @@ ul li a:hover{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 
     width: 100%;
-    min-height: 100vh;
+    height: auto;
 
     background-color: var(--light-primary-color);
 }
 
+/* EDICIÓ AQUI */
 .contenedor-banner {
     display: flex;
-    flex-direction: row;
+    flex-direction: column-reverse;
     align-items: center;
     justify-content: space-around;
-    width: 100rem;
-    min-height: calc(100vh - 30vh);
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    min-height: 50vh;
 }
 
 .subseccion-1-eslogan {
-    min-width: calc(100rem - 45rem);
+    width: 100%;
     display: flex;
     flex-direction: column;
     padding: 1rem;
+    justify-content: center;
+    align-items: center;
 }
 .subseccion-1-eslogan p {
-    font-size: 2.5rem;
+    font-size: 1.9rem;
     text-align: center;
 }
 .enlace-agendar {
@@ -314,27 +309,27 @@ ul li a:hover{
 .subseccion-1-eslogan p, .subseccion-1-eslogan a, .far {
     color: var(--text-icons);
 }
-
 .subseccion-1-eslogan a .far {
-    font-size: 2.5rem;
+    font-size: 1.6rem;
     margin: .5rem;
 }
 .img-banner {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-end;
-    max-width: 43rem;
-    height: 48rem;
+    align-items: center;
+    width: 100%;
 }
 .img-banner video {
+    width: 80%;
+    height: auto;
     border-radius: .8rem;
 }
 
 /* SECCION AGENDAR */
 .seccion-agendar {
     width: 100%;
-    min-height: 100vh;
+    height: auto;
 
     display: flex;
     flex-direction: column;
@@ -352,10 +347,10 @@ ul li a:hover{
 /* TITULOS SECCIONES */
 .titulo-seccion-servicios h2, .contenedor-agendar > span, .contenedor-opiniones > h2 {
     font-weight: bold;
-    font-size: 2.5rem;
+    font-size: 1.7rem;
     text-transform: uppercase;
     color: var(--primary-color-2);
-    margin: 2rem;
+    margin: .8rem;
 }
 
 /* CONTENEDOR FORMULARIO */
@@ -370,11 +365,7 @@ ul li a:hover{
 }
 /* img formulario */
 .img-banner-form img {
-    width: 100%;
-    height: auto;
-    border-radius: .8rem 0 0 .8rem;
-    background-color: var(--primary-color-2);
-    display: block;
+    display: none;
 }
 
 /*seccion formulario */
@@ -485,19 +476,18 @@ select {
 /* SECCION OPINIONES */
 .seccion-opiniones {
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-color: var(--color-fondo-section-2);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-
 }
 .contenedor-opiniones {
     /* background-color: red; */
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     max-width: 100rem;
     height: calc(100vh - 30vh);
@@ -507,9 +497,7 @@ select {
     width: 100%;
     /* background-color: green;*/
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
     flex-wrap: wrap;
 }
 
@@ -568,16 +556,17 @@ select {
     width: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
 .contenedor-targetas-contacto {
     min-height: 20rem;
-    min-width: 100rem;
+    width: 100%;
     padding: 1rem;
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -629,7 +618,7 @@ select {
 
     text-decoration: none;
     
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     
@@ -653,12 +642,12 @@ select {
 
 /* PIE DE PAGINA */
 footer {
-    height: 30rem;
+    height: auto;
     background-color: var(--dark-primary-color);
     width: 100%;
 }
 .contenedor-footer {
-    max-width: 100rem;
+    width: 100%;
     margin-right: auto;
     margin-left: auto;
     text-align: center;
@@ -669,10 +658,21 @@ footer {
     justify-content: center;
 }
 .seccion-enlaces {
-    border-bottom: .4rem solid #fff;
+    border-bottom: .2rem solid #fff;
 }
-.seccion-enlaces a { 
-    padding: .8rem;
+.seccion-enlaces ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    min-height: 2.5rem;
+}
+.seccion-enlaces ul li a { 
+    padding: .2rem;
+    text-align: 1.5rem;
+    color: var(--text-icons);
+    text-decoration: none;
 }
 .seccion-enlaces a:hover {
     transition: .3s;
